chore: enhance type hints and logging in URL converters
- Add type hints for better clarity and type safety in url_converters.py
- Improve logging by using logger.exception for error handling
- Update pyproject.toml to ignore additional linting rule (ERA001)

These changes aim to improve code quality and maintainability.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -156,6 +156,7 @@ ignore = [
     "C408",
     # Boolean positional arguments
     "FBT001", "FBT002", "FBT003",
+    "ERA001",
 ]
 
 fixable = ["ALL"]
