chore: refactor code for improved readability and performance
- Update `pyproject.toml` to ignore additional linting rule `TRY002`.
- Refactor `test_database_integration.py` to use list comprehensions for checking missing files and policies, enhancing readability.
- Simplify various test files by replacing loops with list comprehensions, improving code clarity and performance.
- Enhance error handling in `trips.py` and other modules by specifying exception types, ensuring better debugging and maintainability.

These changes aim to improve code quality, maintainability, and performance across the codebase.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -159,6 +159,7 @@ ignore = [
     # Boolean positional arguments
     "FBT001", "FBT002", "FBT003",
     "ERA001",
+    "TRY002",
 ]
 
 fixable = ["ALL"]
