--- a/pyproject.toml
+++ b/pyproject.toml
@@ -293,6 +293,7 @@ disable = [
     "line-too-long",
     "unnecessary-ellipsis",
     "import-outside-toplevel",
+    "import-error",
     "too-many-arguments",
     "too-many-locals",
     "too-many-branches",
