chore: update .env.example for Duffel API access token
- Changed `DUFFEL_API_KEY` to `DUFFEL_ACCESS_TOKEN` for clarity and consistency with the Duffel Flights API v2 provider.
- Added a comment to indicate the preferred usage of `DUFFEL_ACCESS_TOKEN` and support for the legacy alias `DUFFEL_API_TOKEN`.
- Ensured the file maintains a clean structure by adding a newline at the end.

These changes aim to improve the documentation of environment variables related to the Duffel API integration.

--- a/.env.example
+++ b/.env.example
@@ -134,7 +134,10 @@ BROWSER_MCP_ENDPOINT=http://localhost:3002
 
 # Travel APIs
 FLIGHTS_MCP_ENDPOINT=http://localhost:3003
-DUFFEL_API_KEY=your_duffel_api_key_here
+# Duffel access token used by the Duffel Flights API v2 provider.
+# Preferred: DUFFEL_ACCESS_TOKEN; legacy alias supported: DUFFEL_API_TOKEN.
+DUFFEL_ACCESS_TOKEN=your_duffel_access_token_here
+# DUFFEL_API_TOKEN=your_duffel_access_token_here
 GOOGLE_MAPS_API_KEY=your_google_maps_api_key_here
 
 # Memory and Calendar
