--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,6 +54,7 @@ dependencies = [
     "opentelemetry-sdk>=1.38.0,<1.39.0",
     "opentelemetry-exporter-otlp>=1.38.0,<1.39.0",
     "psutil>=7.1.1,<8.0.0",
+    "upstash-redis>=1.4.0",
 ]
 
 [dependency-groups]
