chore: migrate from DragonflyDB to Upstash Redis for caching
- Removed DragonflyDB configuration from docker-compose and related files, transitioning to Upstash Redis for serverless caching.
- Updated documentation to reflect the new caching solution, including changes in environment variables and architecture diagrams.
- Enhanced the overall deployment process by eliminating the need for local cache containers, simplifying the setup for Vercel deployments.

--- a/docker/prometheus.yml
+++ b/docker/prometheus.yml
@@ -20,13 +20,7 @@ scrape_configs:
     static_configs:
       - targets: ['otel-collector:8889']
 
-  # Scrape DragonflyDB metrics directly
-  - job_name: 'dragonfly-direct'
-    static_configs:
-      - targets: ['dragonfly:6379']
-    metrics_path: /metrics
-    params:
-      format: ['prometheus']
+  # Upstash Redis is a managed serverless service; metrics are available via Upstash dashboard.
 
   # Scrape TripSage API metrics (when available)
   # CONFIGURATION NOTES for different development setups:
