--- a/docker/otel-collector-config.yaml
+++ b/docker/otel-collector-config.yaml
@@ -6,15 +6,6 @@ receivers:
       http:
         endpoint: 0.0.0.0:4318
 
-  # Prometheus receiver to scrape metrics from DragonflyDB
-  prometheus:
-    config:
-      scrape_configs:
-        - job_name: 'dragonfly'
-          scrape_interval: 10s
-          static_configs:
-            - targets: ['dragonfly:6379']
-
 processors:
   batch:
     timeout: 1s
@@ -81,7 +72,7 @@ service:
       exporters: [jaeger, logging]
     
     metrics:
-      receivers: [otlp, prometheus]
+      receivers: [otlp]
       processors: [memory_limiter, batch, resource]
       exporters: [prometheus, logging]
     
