chore: update Dockerfile and scripts for Upstash Redis integration
- Replaced DragonflyDB references in `Dockerfile.api` with Upstash Redis configuration.
- Updated `init_database.py` to use the new `supabase` import method.
- Enhanced `security_validation.py` with type hints and improved function documentation.
- Refactored `verify_extensions.py` to streamline console output and ensure connection assertions.
- Cleaned up `activities.py` by simplifying the `get_activity_details` function signature.
- Added a TODO comment in `api_key_service.py` for future refactoring of compatibility code.

--- a/docker/Dockerfile.api
+++ b/docker/Dockerfile.api
@@ -4,7 +4,7 @@
 # =============================================================================
 # FastAPI backend service with modern architecture:
 # - Mem0 memory system with pgvector backend
-# - DragonflyDB for caching (25x faster than Redis)
+# - Upstash Redis (HTTP) for caching (serverless)
 # - Direct SDK integrations (Duffel, Google Maps, Crawl4AI, Playwright)
 # - Supabase PostgreSQL with pgvector extension
 
@@ -55,7 +55,7 @@ EXPOSE 8080
 # Set environment variables for modern architecture
 ENV PYTHONPATH=/app
 ENV DATABASE_TYPE=supabase
-ENV CACHE_TYPE=dragonfly
+ENV CACHE_TYPE=upstash
 ENV MEMORY_PROVIDER=mem0
 ENV VECTOR_STORE=pgvector
 
