chore: add pytest and pytest-asyncio dependencies for improved testing
- Included `pytest` and `pytest-asyncio` in the development dependencies to enhance testing capabilities.
- Introduced a new unit test file for validating registry-backed API dependencies, ensuring services resolve correctly from the global registry.
- Improved test coverage and structure for the API dependency management.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -103,6 +103,8 @@ dev = [
     "rich>=14.2.0",
     "numpy>=2.3.4",
     "uvloop>=0.22.1",
+    "pytest>=8.4.2",
+    "pytest-asyncio>=1.2.0",
 ]
 
 
