--- a/docker/docker-compose.mcp.yml
+++ b/docker/docker-compose.mcp.yml
@@ -12,13 +12,6 @@
 # - Browser: Playwright direct SDK
 # - Only 1 MCP service: Airbnb (no official SDK available)
 #
-# PERFORMANCE ACHIEVEMENTS:
-# - Serverless cache via Upstash
-# - 11x faster vector search (pgvector + pgvectorscale)
-# - 91% faster memory operations (Mem0)
-# - 80% infrastructure cost reduction
-# - 60-70% architecture complexity reduction
-#
 # USAGE:
 # docker compose -f docker/docker-compose.mcp.yml up -d
 #
@@ -27,7 +20,7 @@
 services:
   # ==========================================================================
   # CORE INFRASTRUCTURE SERVICES
-  # Modern high-performance data layer
+  # Data layer
   # ==========================================================================
   
   supabase:
@@ -196,8 +189,7 @@ services:
     ports:
       - "4317:4317"   # OTLP gRPC receiver
       - "4318:4318"   # OTLP HTTP receiver
-      - "8888:8888"   # Prometheus metrics
-      - "8889:8889"   # Prometheus exporter
+      - "8888:8888"   # Collector self-metrics
     depends_on:
       - jaeger
     restart: unless-stopped
@@ -212,59 +204,6 @@ services:
           cpus: '0.25'
           memory: '256M'
 
-  prometheus:
-    image: prom/prometheus:latest
-    container_name: tripsage-prometheus
-    command:
-      - '--config.file=/etc/prometheus/prometheus.yml'
-      - '--storage.tsdb.path=/prometheus'
-      - '--web.console.libraries=/etc/prometheus/console_libraries'
-      - '--web.console.templates=/etc/prometheus/consoles'
-      - '--storage.tsdb.retention.time=7d'
-      - '--web.enable-lifecycle'
-    volumes:
-      - ./prometheus.yml:/etc/prometheus/prometheus.yml:ro
-      - prometheus_data:/prometheus
-    ports:
-      - "9090:9090"
-    depends_on:
-      - otel-collector
-    restart: unless-stopped
-    networks:
-      - tripsage-network
-    deploy:
-      resources:
-        limits:
-          cpus: '0.5'
-          memory: '512M'
-        reservations:
-          cpus: '0.25'
-          memory: '256M'
-
-  grafana:
-    image: grafana/grafana:latest
-    container_name: tripsage-grafana
-    environment:
-      - GF_SECURITY_ADMIN_PASSWORD=${GRAFANA_PASSWORD:-admin}
-      - GF_USERS_ALLOW_SIGN_UP=false
-    volumes:
-      - grafana_data:/var/lib/grafana
-      - ./grafana/provisioning:/etc/grafana/provisioning:ro
-    ports:
-      - "3001:3000"
-    depends_on:
-      - prometheus
-    restart: unless-stopped
-    networks:
-      - tripsage-network
-    deploy:
-      resources:
-        limits:
-          cpus: '0.5'
-          memory: '512M'
-        reservations:
-          cpus: '0.25'
-          memory: '256M'
 
 # ==========================================================================
 # NETWORK & VOLUME CONFIGURATION
@@ -283,7 +222,3 @@ volumes:
     name: tripsage_supabase_data
   dragonfly_data:
     name: tripsage_dragonfly_data
-  prometheus_data:
-    name: tripsage_prometheus_data
-  grafana_data:
-    name: tripsage_grafana_data
