chore: update project configuration and improve code quality
- Added pylint configuration to ignore specific rules in `pyproject.toml` for better linting control.
- Refactored exit handling in benchmark scripts to use `sys.exit()` for clearer intent.
- Simplified logic in `ConfigManager` to reduce unnecessary conditionals.
- Enhanced performance test assertions for memory tracking.
- Updated WebSocket connection tests to improve clarity and consistency in naming.
- Refined database service metrics handling to ensure proper initialization and error handling.
- Improved response message formatting in `ItineraryAgentNode` for better readability.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -182,6 +182,8 @@ select = [
     "T10",  # flake8-debugger
     # Exception handling
     "TRY",  # tryceratops
+    # pylint
+    "PL",
 ]
 
 ignore = [
@@ -210,6 +212,8 @@ ignore = [
     "ERA001",
     "TRY002",
     "E402",  # Import not at top of file
+    # pylint
+    "PLR2004", "PLR0911", "PLC0415", "PLW0603"
 ]
 
 fixable = ["ALL"]
@@ -256,6 +260,14 @@ exclude = [
     "dist",
     "docs",
     "site",
+    "frontend",
+    "node_modules",
+    ".next",
+    "out",
+    "dist",
+    "build",
+    "coverage",
+    "htmlcov",
     ".pytest_cache",
     ".ruff_cache",
     ".mypy_cache",
