chore: update frontend configuration and dependencies for Next.js 16
- Upgraded Biome schema to 2.2.7 and adjusted import organization settings.
- Updated Next.js configuration to enable cache components and turbopack settings.
- Refined package.json dependencies, including major updates for @ai-sdk packages and other libraries.
- Enhanced tsconfig.json for improved type checking and JSX support.
- Updated vitest configuration to align with new coverage options and removed deprecated settings.
- Regenerated pnpm lockfile to reflect the latest dependency changes.

--- a/frontend/biome.json
+++ b/frontend/biome.json
@@ -1,8 +1,6 @@
 {
-  "$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
-  "organizeImports": {
-    "enabled": true
-  },
+  "$schema": "https://biomejs.dev/schemas/2.2.7/schema.json",
+  "assist": { "actions": { "source": { "organizeImports": "on" } } },
   "formatter": {
     "enabled": true,
     "formatWithErrors": false,
@@ -77,24 +75,22 @@
     }
   },
   "files": {
-    "include": [
-      "src/**/*.ts",
-      "src/**/*.tsx",
-      "src/**/*.js",
-      "src/**/*.jsx",
-      "e2e/**/*.ts",
-      "*.ts",
-      "*.tsx"
-    ],
-    "ignore": [
-      "node_modules",
-      ".next",
-      "dist",
-      "build",
-      "coverage",
-      "public",
-      "*.config.js",
-      "*.config.mjs"
+    "includes": [
+      "**/src/**/*.ts",
+      "**/src/**/*.tsx",
+      "**/src/**/*.js",
+      "**/src/**/*.jsx",
+      "**/e2e/**/*.ts",
+      "**/*.ts",
+      "**/*.tsx",
+      "!**/node_modules",
+      "!**/.next",
+      "!**/dist",
+      "!**/build",
+      "!**/coverage",
+      "!**/public",
+      "!**/*.config.js",
+      "!**/*.config.mjs"
     ]
   }
 }
