--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "build:analyze": "ANALYZE=true next build",
     "start": "next start",
@@ -22,93 +22,102 @@
     "prepare": "husky"
   },
   "dependencies": {
-    "@ai-sdk/openai": "^1.3.22",
+    "@ai-sdk/openai": "^2.0.53",
+    "@ai-sdk/react": "^2.0.76",
     "@hello-pangea/dnd": "^18.0.1",
-    "@hookform/resolvers": "^5.0.1",
-    "@radix-ui/react-alert-dialog": "^1.1.14",
+    "@hookform/resolvers": "^3.10.0",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.10",
-    "@radix-ui/react-checkbox": "^1.3.2",
-    "@radix-ui/react-collapsible": "^1.1.11",
-    "@radix-ui/react-dialog": "^1.1.14",
-    "@radix-ui/react-dropdown-menu": "^2.1.15",
-    "@radix-ui/react-hover-card": "^1.1.14",
+    "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-collapsible": "^1.1.12",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-hover-card": "^1.1.15",
     "@radix-ui/react-label": "^2.1.7",
-    "@radix-ui/react-menubar": "^1.1.15",
-    "@radix-ui/react-navigation-menu": "^1.2.13",
-    "@radix-ui/react-popover": "^1.1.14",
+    "@radix-ui/react-menubar": "^1.1.16",
+    "@radix-ui/react-navigation-menu": "^1.2.14",
+    "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-progress": "^1.1.7",
-    "@radix-ui/react-scroll-area": "^1.2.9",
-    "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.7",
-    "@radix-ui/react-slider": "^1.3.5",
+    "@radix-ui/react-slider": "^1.3.6",
     "@radix-ui/react-slot": "^1.2.3",
-    "@radix-ui/react-switch": "^1.2.5",
-    "@radix-ui/react-tabs": "^1.1.12",
-    "@radix-ui/react-toast": "^1.2.14",
-    "@radix-ui/react-tooltip": "^1.2.7",
-    "@supabase/auth-helpers-react": "^0.5.0",
+    "@radix-ui/react-switch": "^1.2.6",
+    "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-toast": "^1.2.15",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@supabase/auth-ui-react": "^0.4.7",
     "@supabase/auth-ui-shared": "^0.1.8",
-    "@supabase/postgrest-js": "^1.19.4",
-    "@supabase/ssr": "^0.6.1",
-    "@supabase/supabase-js": "^2.50.0",
-    "@tanstack/react-query": "5",
-    "@tanstack/react-query-devtools": "^5.80.6",
+    "@supabase/postgrest-js": "^2.76.1",
+    "@supabase/ssr": "^0.7.0",
+    "@supabase/supabase-js": "^2.76.1",
+    "@tanstack/react-query": "^5.90.5",
+    "@tanstack/react-query-devtools": "^5.90.2",
     "@testing-library/react": "^16.3.0",
     "@types/react-syntax-highlighter": "^15.5.13",
-    "ai": "^4.3.16",
+    "ai": "^5.0.76",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
-    "framer-motion": "12.12.2",
-    "lucide-react": "^0.511.0",
-    "next": "15.4.7",
+    "framer-motion": "12.23.24",
+    "lucide-react": "^0.546.0",
+    "next": "16.0.0",
     "next-themes": "^0.4.6",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "react-error-boundary": "^6.0.0",
-    "react-hook-form": "^7.56.4",
-    "react-syntax-highlighter": "^15.6.1",
-    "recharts": "^2.15.3",
-    "tailwind-merge": "^3.3.0",
+    "react-hook-form": "^7.65.0",
+    "react-syntax-highlighter": "^16.0.0",
+    "recharts": "^3.3.0",
+    "tailwind-merge": "^3.3.1",
+    "uuid": "^13.0.0",
     "vaul": "^1.1.2",
-    "web-vitals": "^5.0.3",
-    "zod": "^3.25.28",
-    "zustand": "^5.0.5"
+    "web-vitals": "^5.1.0",
+    "zod": "^3.25.76",
+    "zustand": "^5.0.8",
+    "@upstash/redis": "^1.34.3"
   },
   "devDependencies": {
-    "@biomejs/biome": "^1.9.4",
-    "@eslint/eslintrc": "^3",
-    "@next/bundle-analyzer": "^15.3.4",
-    "@playwright/test": "^1.52.0",
-    "@tailwindcss/postcss": "^4",
-    "@testing-library/jest-dom": "^6.6.3",
+    "@biomejs/biome": "^2.2.7",
+    "@eslint/eslintrc": "^3.3.1",
+    "@next/bundle-analyzer": "^16.0.0",
+    "@playwright/test": "^1.56.1",
+    "@tailwindcss/postcss": "^4.1.15",
+    "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/user-event": "^14.6.1",
-    "@types/node": "24.8.1",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/node": "24.9.1",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
     "@vitejs/plugin-react": "^5.0.4",
-    "@vitest/coverage-v8": "^3.1.4",
-    "@vitest/ui": "^3.1.4",
-    "eslint": "^9",
-    "eslint-config-next": "15.5.6",
-    "eslint-plugin-tailwindcss": "^3.18.0",
+    "@vitest/coverage-v8": "^4.0.1",
+    "@vitest/ui": "^4.0.1",
+    "eslint": "^9.38.0",
+    "eslint-config-next": "16.0.0",
     "husky": "^9.1.7",
-    "jose": "^6.0.11",
+    "jose": "^6.1.0",
     "jsdom": "^27.0.1",
-    "lint-staged": "^16.0.0",
-    "prettier": "^3.5.3",
+    "jsondiffpatch": "^0.7.3",
+    "lint-staged": "^16.2.6",
+    "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.7.1",
-    "tailwindcss": "^4",
+    "tailwindcss": "^4.1.15",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5",
-    "vitest": "^3.1.4"
+    "typescript": "^5.9.3",
+    "vitest": "^4.0.1"
+  },
+  "engines": {
+    "node": ">=24.0.0",
+    "pnpm": ">=9.0.0"
   },
   "pnpm": {
     "overrides": {
       "prismjs": ">=1.30.0",
       "brace-expansion": ">=2.0.2"
-    }
+    },
+    "ignoredBuiltDependencies": [
+      "esbuild"
+    ]
   }
 }
