--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,7 +25,7 @@
     "@ai-sdk/openai": "^2.0.53",
     "@ai-sdk/react": "^2.0.76",
     "@hello-pangea/dnd": "^18.0.1",
-    "@hookform/resolvers": "^3.10.0",
+    "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.3",
@@ -56,6 +56,7 @@
     "@tanstack/react-query-devtools": "^5.90.2",
     "@testing-library/react": "^16.3.0",
     "@types/react-syntax-highlighter": "^15.5.13",
+    "@upstash/redis": "^1.35.6",
     "ai": "^5.0.76",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -75,9 +76,8 @@
     "uuid": "^13.0.0",
     "vaul": "^1.1.2",
     "web-vitals": "^5.1.0",
-    "zod": "^3.25.76",
-    "zustand": "^5.0.8",
-    "@upstash/redis": "^1.34.3"
+    "zod": "^4.1.12",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.2.7",
