--- a/frontend/package.json
+++ b/frontend/package.json
@@ -108,7 +108,7 @@
     "vitest": "^4.0.1"
   },
   "engines": {
-    "node": ">=24.0.0",
+    "node": "^24 || >=24",
     "pnpm": ">=9.0.0"
   },
   "pnpm": {
