docs(api): update documentation and scripts for API reference and OpenAPI generation
- Corrected links in dashboard API documentation for authentication references.
- Enhanced error codes documentation with improved formatting and clarity.
- Standardized section headers in REST API endpoints documentation.
- Revised usage examples for consistency and clarity.
- Improved backend testing guide with detailed unit testing strategies and mocking techniques.
- Added a script to generate OpenAPI specification from the FastAPI app.
- Created an OpenAPI specification documentation page for interactive exploration.
- Introduced a script to automate OpenAPI spec generation and save it to the docs directory.

--- a/.gitignore
+++ b/.gitignore
@@ -241,6 +241,12 @@ frontend/*.temp.*
 
 # Documentation generation artifacts
 site/
+docs/site/
+.mkdocs/
+docs/openapi.json
+docs/swagger.json
+docs/openapi.yaml
+docs/swagger.yaml
 docs/**/temp/
 docs/**/*.backup
 docs/**/*-backup.*
