--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,8 +12,7 @@ dependencies = [
     "httpx>=0.28.1",
     "python-multipart>=0.0.20",
     "starlette>=0.48.0,<0.49.0",
-    # Authentication and security
-    "pyjwt>=2.10.1", # For Supabase JWT token validation
+    # Authentication and security (Supabase SDK handles token validation)
     "passlib[bcrypt]>=1.7.4", # For password hashing
     "cryptography>=46.0.3",
     "aiohttp>=3.13.1",
