--- a/pyproject.toml
+++ b/pyproject.toml
@@ -285,7 +285,7 @@ exclude = [
     ".venv",
 ]
 pythonVersion = "3.13"
-typeCheckingMode = "basic"
+typeCheckingMode = "strict"
 reportMissingImports = "warning"
 reportMissingTypeStubs = false
 
