--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -13,7 +13,7 @@ max_rows = 1000
 # Database configuration
 port = 54322
 shadow_port = 54320
-major_version = 15
+major_version = 17
 
 [db.pooler]
 enabled = false
@@ -24,7 +24,6 @@ max_client_conn = 100
 
 [realtime]
 enabled = true
-port = 54324
 ip_version = "IPv4"
 
 [studio]
@@ -40,22 +39,19 @@ pop3_port = 54327
 
 [storage]
 enabled = true
-port = 54328
 file_size_limit = "50MiB"
 image_transformation = { enabled = true }
 
 [auth]
 enabled = true
-port = 54329
 site_url = "http://localhost:3000"
 additional_redirect_urls = ["https://localhost:3000"]
 jwt_expiry = 3600
 enable_signup = true
-enable_email_confirmations = true
 
 [auth.email]
 enable_signup = true
-double_confirm_email_changes = true
+double_confirm_changes = true
 enable_confirmations = true
 
 # OAuth providers (configure in Supabase Dashboard)
@@ -73,10 +69,8 @@ redirect_uri = "http://localhost:54321/auth/v1/callback"
 
 [edge_runtime]
 enabled = true
-port = 54330
 inspector_port = 54331
 
 # Project-specific settings
 [experimental]
 # Enable experimental features for development
-webhooks = false
